--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:enabled="true"
+    android:text="@string/reset_button"
     app:layout_constraintTop_toBottomOf="@id/moves_counter"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintRight_toRightOf="parent"
