--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -21,33 +21,23 @@
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toTopOf="@+id/android"/>
+    app:layout_constraintBottom_toBottomOf="parent"/>
 
   <ImageButton
     android:id="@+id/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/android_button"
-    app:layout_constraintTop_toBottomOf="@id/tile_grid"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toLeftOf="@+id/r2d2"/>
+    app:layout_constraintTop_toTopOf="@+id/tile_grid"
+    app:layout_constraintRight_toLeftOf="@id/tile_grid"/>
 
   <ImageButton
     android:id="@+id/r2d2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/r2d2_button"
-    app:layout_constraintTop_toBottomOf="@+id/tile_grid"
-    app:layout_constraintLeft_toRightOf="@+id/android"
-    app:layout_constraintRight_toRightOf="parent"/>
-
-  <TextView
-    android:id="@+id/moves_counter"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintBottom_toTopOf="@+id/reset_button"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"/>
+    app:layout_constraintTop_toBottomOf="@+id/android"
+    app:layout_constraintRight_toLeftOf="@id/tile_grid"/>
 
   <Button
     android:id="@+id/reset_button"
@@ -55,11 +45,15 @@
     android:layout_height="wrap_content"
     android:enabled="true"
     android:text="@string/reset_button"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/tile_grid"
+    app:layout_constraintLeft_toRightOf="@+id/tile_grid"
     />
 
-
+  <TextView
+    android:id="@+id/moves_counter"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toBottomOf="@+id/reset_button"
+    app:layout_constraintLeft_toRightOf="@+id/tile_grid"/>
 
 </android.support.constraint.ConstraintLayout>
