--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -29,7 +29,7 @@
     android:layout_height="wrap_content"
     android:src="@drawable/android_button"
     app:layout_constraintTop_toTopOf="@+id/tile_grid"
-    app:layout_constraintRight_toLeftOf="@id/tile_grid"/>
+    app:layout_constraintRight_toLeftOf="@+id/tile_grid"/>
 
   <ImageButton
     android:id="@+id/r2d2"
@@ -37,7 +37,7 @@
     android:layout_height="wrap_content"
     android:src="@drawable/r2d2_button"
     app:layout_constraintTop_toBottomOf="@+id/android"
-    app:layout_constraintRight_toLeftOf="@id/tile_grid"/>
+    app:layout_constraintRight_toLeftOf="@+id/tile_grid"/>
 
   <Button
     android:id="@+id/reset_button"
