--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/android_button"
-    app:layout_constraintTop_toBottomOf="@id/tile_grid"
+    app:layout_constraintTop_toBottomOf="@+id/tile_grid"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toLeftOf="@+id/r2d2"/>
 
