--- a/app/src/main/res/layout/fragment_puzzle.xml
+++ b/app/src/main/res/layout/fragment_puzzle.xml
@@ -2,7 +2,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="edu.cnm.deepdive.tileslide.PuzzleFragment"
+  tools:context="edu.cnm.deepdive.tileslide.fragment.PuzzleFragment"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
